# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.

# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Street #330, Boston, MA 02111-1307,
# USA.

#--------------------------------------------------------------------------
SUBDIRS = manual

#--------------------------------------------------------------------------
EXTRA_DIST = README rfc1733.txt rfc2086.txt rfc2095.txt rfc2192.txt rfc2221.txt rfc2595.txt rfc3028.txt	rfc1731.txt rfc2060.txt rfc2087.txt rfc2177.txt	rfc2193.txt rfc2342.txt rfc2683.txt rfc3348.txt rfc1732.txt rfc2061.txt rfc2088.txt rfc2180.txt rfc2195.txt rfc2359.txt rfc2971.txt bincimap-faq.html bincimap.css bincimap-tech.html bincimap-imapdir.html bincimap-goals.html
