# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.

# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Street #330, Boston, MA 02111-1307,
# USA.

#--------------------------------------------------------------------------
noinst_PROGRAMS = autotests


#--------------------------------------------------------------------------
autotests_SOURCES = framework.h framework.cc tests.cc ../src/convert.cc ../src/regmatch.cc ../src/tools.h ../src/tools.cc

#--------------------------------------------------------------------------
AM_CXXFLAGS = -I..


#--------------------------------------------------------------------------
autotests_LDFLAGS = -L..
